--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday My Love - A Special Celebration</title>
-    <meta name="description" content="A beautiful and romantic birthday website filled with love, gentle animations, and heartfelt messages for someone special" />
-    <meta name="author" content="Your Loving Partner" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Happy Birthday MSindhuja - A Special Celebration</title>
+  <meta name="description" content="A beautiful and romantic birthday website filled with love, gentle animations, and heartfelt messages for someone special" />
+  <meta name="author" content="Your Loving Partner" />
 
-    <meta property="og:title" content="Happy Birthday My Love - A Special Celebration" />
-    <meta property="og:description" content="A beautiful and romantic birthday website filled with love, gentle animations, and heartfelt messages for someone special" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Happy Birthday My Love - A Special Celebration" />
+  <meta property="og:description" content="A beautiful and romantic birthday website filled with love, gentle animations, and heartfelt messages for someone special" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/assets/WhatsApp Image 2025-09-23 at 18.57.53_7e23cd17.jpg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="/assets/WhatsApp Image 2025-09-23 at 18.57.53_7e23cd17.jpg" />
+  <link rel="icon" type="image/jpeg" href="/assets/WhatsApp Image 2025-09-23 at 18.57.53_7e23cd17.jpg" />
   </head>
 
   <body>
