--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Birthday MSindhuja - A Special Celebration</title>
+  <title>Happy Birthday Sindhuja - A Special Celebration</title>
   <meta name="description" content="A beautiful and romantic birthday website filled with love, gentle animations, and heartfelt messages for someone special" />
   <meta name="author" content="Your Loving Partner" />
 
